# trailblazer_description

./: CMakeLists.txt  README.md  package.xml
config/: calibration.yaml
launch/: load.launch  visualize.launch
meshes/robot/collision/: column.stl  main_body.stl  track_base.stl  track_left.stl  track_right.stl
meshes/robot/visual/: column.stl  main_body.stl  main_body_logos.stl
meshes/sensors/visual/: oak_d_pro_w_poe.stl
rviz/: trailblazer.rviz
scripts/: multical_to_urdf.py
urdf/: chassis.urdf.xacro  track_collision.urdf.xacro  trailblazer.urdf.xacro
urdf/sensors/: bpearl.urdf.xacro  oak_d_pro_w_poe.urdf.xacro
urdf/tools/: calibration.urdf.xacro  constants.urdf.xacro
